manifests/webserver-microgateway-config/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver
  namespace: oidc
spec:
  hostnames:
  - "webserver-127-0-0-1.nip.io"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: webserver
    namespace: oidc
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: webserver
      namespace: oidc
      port: 8443
